# clounion

./: .data_node_info_debug_dir_2048  .data_node_info_debug_dir_65536  Cargo.toml  Client.toml  ClientTest.toml  DataNodeTest.toml  MainServerTest.toml  deploy.yaml
clounion-cli/: Cargo.toml
clounion-cli/src/: main.rs
proto/: data_node.proto  data_node_api.proto  main_server.proto  main_server_api.proto  registry_main_server.proto
storage/data-node/: Cargo.toml  build.rs
storage/data-node/src/: block_storage.rs  block_storage_service.rs  config.rs  data_node_controller.rs  data_node_info.rs  data_node_service.rs  disk_stats.rs  main.rs  main_server_client.rs  registry_client.rs
storage/main-server/: Cargo.toml  build.rs
storage/main-server/src/: config.rs  constants.rs  data_node_client.rs  main.rs
storage/main-server/src/service/: error.rs  metadata_controller.rs  metadata_service.rs  metadata_service_impl.rs  metadata_service_redis.rs  mod.rs
storage/main-server/src/storage_types/: large_file.rs  mod.rs  object.rs  small_file.rs
storage/main-server/src/storage_types/commit_types/: block.rs  commit.rs  merkle_tree.rs  mod.rs  sequence.rs
storage/shared/: Cargo.toml
storage/shared/src/: data_node_error.rs  error.rs  lib.rs  main_server_error.rs  register_client_error.rs
storage/storage-client/: Cargo.toml  build.rs
storage/storage-client/benches/: storage-benches.rs
storage/storage-client/src/: client.rs  config.rs  lib.rs
