[workspace]
members = [
    "storage/main-server",
    "storage/data-node",
    "storage/shared"
]

[workspace.dependencies]
async-trait = { version = "0.1.58" }
clap = { version = "4.0.18", features = ["derive"] }
crc32fast = { version = "1.3.2" }
criterion = { version = "0.4.0", features = ["async_tokio"] }
dotenv = { version = "0.15.0" }
fast-str = { version = "1.0.0", features = ["serde"] }
futures = { version = "0.3.25" }
hyper = { version = "0.14", features = ["full"] }
prost = { version = "0.11.0" }
prost-types = { version = "0.11.2" }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89" }
smallvec = { version = "1.10.0" }
sysinfo = { version = "0.28.2" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.11" }
toml = { version = "0.7.2" }
tonic = { version = "0.8.2" }
tonic-build = { version = "0.8.2", features = ["prost"] }
tonic-health = { version = "0.8.0" }
tonic-web = { version = "0.5.0" }
tower = { version = "0.4.13", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["std", "fmt", "registry"] }
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4", "zerocopy"] }
zerocopy = { version = "0.6.1" }