[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-web.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
sysinfo.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
tonic-build.workspace = true
