[package]
name = "main-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
crc32fast.worksapce = true
fast-str.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
shared = { path = "../shared" }
smallvec.workspace = true
redis.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-web.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
sysinfo.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[build-dependencies]
tonic-build.workspace = true