[package]
name = "storage-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
crc32fast.worksapce = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
smallvec.workspace = true
redis.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tower.workspace = true
serde.workspace = true
sysinfo.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "storage-benches"
harness = false